syntax = "proto3";
package networks.packages;
option java_package = "org.petos.pum.networks.dto.packages";
option java_multiple_files = true;

//request section
enum InstanceInfoType {
  SHORT = 0;
  FULL = 1;
}
enum PayloadArchiveType {
  NONE = 0;
  GZIP = 1;
  BROTLI = 2;
  LZMA = 3;
}
message HeaderRequest {
  string package_alias = 1; //package mnemonic name
}
message InstanceRequest {
  uint32 package_id = 1;
  string version = 2; //if no version was specified than repository service should send all packages for given package_id
  InstanceInfoType type = 3;
}
message PayloadRequest {//the response on this request is
  uint32 package_id = 1;
  string version = 2;
  PayloadArchiveType type = 3;
}
//responses section
message HeaderInfo {
  uint32 package_id = 1;
  string package_type = 2;
  string license = 4;
  string package_name = 5;
  repeated string aliases = 3; //all available names for package, to client caching
}
message ShortInstanceInfo {
  uint32 package_id = 1;
  string version = 2;
}
message FullInstanceInfo {
  uint32 package_id = 1;
  string version = 2;
  //the deprecated field
  map<string, uint64> archives = 5; //archive type name and corresponding archive size
  //consider to replace by following: map<uint16, uint64> archives = 7;
  repeated ShortInstanceInfo dependencies = 6; //dependencies
  //todo: add publication time
}
//the information about real http-endpoint
message EndpointInfo {
  string secret = 1; //to establish SSL connection
  string repository_ip = 2;
}
message PublishingRequest {
  string package_name = 1;
  string package_type = 2;
  string version = 3;
  string license = 4;
  uint64 publisher_id = 5;//the unique id for
  repeated string aliases = 6;
  repeated ShortInstanceInfo dependencies = 7;
}